--- a/provaSomm.ipynb
+++ b/provaSomm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
-    "\n"
+    "import joblib\n"
    ]
   },
   {
@@ -405,8 +405,7 @@
    ],
    "source": [
     "data.corr()\n",
-    "sns.heatmap(data.corr(), annot=True)\n",
-    "absol"
+    "sns.heatmap(data.corr(), annot=True)\n"
    ]
   },
   {
